# server/routes/User.route.js
@@ -3,7 +3,6 @@ const { getAllUsers, getUser, updateUser, deleteUser, addUser } = require('../co
 const router = express.Router()
 
 router.get('/', getAllUsers)
-router.post('/', addUser)
 router.get('/:id', getUser)
 router.patch('/:id', updateUser)
 router.delete('/:id', deleteUser)
